spacing fixed, media queries added

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,11 +15,11 @@
 
 
 #navigation_image {
-	width: 2rem;
+	width: 2.5rem;
 	height: auto;
 	position: fixed;
 	z-index: 30; // here so that nav opens on zine
-	margin: .75rem 0 0 .25rem;
+	margin: .5rem 0 0 1rem;
 }
 
 .side-nav {
@@ -54,6 +54,12 @@
 			}
 
 		}
+	}
+}
+
+@media (max-width: 550px){
+	#navigation_image {
+		margin-left: .5rem;
 	}
 }
 
