--- a/_sass/_individual_posts.scss
+++ b/_sass/_individual_posts.scss
@@ -1,9 +1,5 @@
 // the styles of individual posts, when you click through their parent page
 .post_container {
-	// width: 65vw;
-	// display: inline-block;
-	// margin: 0 auto;
-	// display: flex;
 	align-items: center;
 	justify-content:center;
 	padding: 1rem 2.5rem;
@@ -44,5 +40,16 @@
 			margin: 0 auto;
 			text-align: center;
 		}
+	}
+}
+
+@media (max-width: 750px){
+	.post_container {
+		padding-left: 6rem;
+	}
+}
+@media (max-width: 550px){
+	.post_container {
+		padding-left: 4rem;
 	}
 }
